# caf_frameworks_av

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac
apex/: manifest.json  manifest_codec.json
camera/: Android.bp  CameraBase.cpp  CameraParameters.cpp  Makefile.am
camera/cameraserver/: Android.mk
cmds/stagefright/: stagefright.cpp
drm/common/: DrmEngineBase.cpp  IDrmManagerService.cpp
drm/drmserver/: DrmManager.cpp  DrmManagerService.cpp
drm/libdrmframework/: Android.mk  DrmManagerClient.cpp  DrmManagerClientImpl.cpp
drm/libdrmframework/drmuilitywrapper/: Android.mk
drm/libdrmframework/include/: DrmManager.h  DrmManagerClientImpl.h  DrmManagerService.h  IDrmManagerService.h
gestures/: GestureDevice.cpp  IGestureDevice.cpp  IGestureDeviceClient.cpp  IGestureDeviceService.cpp
include/: android_adapter.h
include/camera/: CameraParameters.h  QCameraParameters.h
include/drm/: DrmManagerClient.h  drm_framework_common.h
include/gestures/: GestureDevice.h  IGestureDevice.h  IGestureDeviceClient.h  IGestureDeviceService.h
include/media/: AudioParameter.h  AudioPolicyHelper.h  AudioRecord.h  AudioSystem.h  AudioTrack.h  IAudioFlinger.h  IAudioPolicyService.h  IDirectTrack.h  IDirectTrackClient.h  IMediaPlayer.h  IMediaRecorder.h  MediaPlayerInterface.h  MediaProfiles.h  Metadata.h  SoundPool.h  ToneGenerator.h  mediaplayer.h  mediarecorder.h
include/media/nbaio/: NBAIO.h
include/media/stagefright/: ACodec.h  AudioPlayer.h  AudioSource.h  CameraSource.h  ColorConverter.h  DataSource.h  ExtendedCodec.h  ExtendedExtractorFuncs.h  ExtendedStats.h  ExtendedWriter.h  FMA2DPWriter.h  LPAPlayer.h  MPEG4Writer.h  MPQAudioPlayer.h  MediaCodec.h  MediaCodecList.h  MediaCodecSource.h  MediaDebug.h  MediaDefs.h  MediaErrors.h  MediaExtractor.h  MediaHTTP.h  MediaSource.h  MediaWriter.h  MetaData.h  OMXCodec.h  QCOMXCodec.h  TunnelPlayer.h  Utils.h
include/private/media/: AudioTrackShared.h
libvideoeditor/lvpp/: Android.mk  NativeWindowRenderer.cpp
media/audioserver/: main_audioserver.cpp
media/libaudioclient/: AudioRecord.cpp  AudioTrack.cpp
media/libaudiohal/: DevicesFactoryHalHidl.cpp
media/libaudiohal/4.0/: ConversionHelperHidl.cpp
media/libaudiohal/impl/: ConversionHelperHidl.cpp
media/libavextensions/: Android.bp
media/libavextensions/stagefright/: AVExtensions.h  AVFactory.cpp  AVUtils.cpp
media/libeffects/factory/: EffectsFactory.c
media/libeffects/visualizer/: EffectVisualizer.cpp
media/libheif/: HeifDecoderImpl.cpp
media/libmedia/: Android.mk  AudioParameter.cpp  AudioRecord.cpp  AudioSystem.cpp  AudioTrack.cpp  AudioTrackShared.cpp  IAudioFlinger.cpp  IAudioFlingerClient.cpp  IAudioPolicyService.cpp  IAudioTrack.cpp  ICrypto.cpp  IDirectTrack.cpp  IDirectTrackClient.cpp  IDrm.cpp  IEffect.cpp  IMediaPlayer.cpp  IOMX.cpp  IResourceManagerDeathNotifier.cpp  IResourceManagerDeathNotifier.h  IResourceManagerService.cpp  IResourceManagerService.h  MediaProfiles.cpp  MediaScanner.cpp  MediaScannerClient.cpp  ResourceManagerService.cpp  ResourceManagerService.h  SoundPool.cpp  ToneGenerator.cpp  TrackUtils.cpp  TrackUtils.h  TypeConverter.cpp  autodetect.h  mediaplayer.cpp  mediarecorder.cpp
media/libmediaplayerservice/: Android.mk  MediaPlayerFactory.cpp  MediaPlayerService.cpp  MediaPlayerService.h  MetadataRetrieverClient.cpp  MidiFile.cpp  MidiFile.h  StagefrightPlayer.cpp  StagefrightPlayer.h  StagefrightRecorder.cpp  StagefrightRecorder.h
media/libmediaplayerservice/nuplayer/: Android.mk  GenericSource.cpp  GenericSource.h  HLSRenderer.cpp  HLSRenderer.h  HTTPLiveSource.cpp  HTTPLiveSource.h  MPQHALWrapper.cpp  MPQHALWrapper.h  NuPlayer.cpp  NuPlayer.h  NuPlayerDecVobPassThrough.cpp  NuPlayerDecVobPassThrough.h  NuPlayerDecoder.cpp  NuPlayerDecoder.h  NuPlayerDecoderBase.cpp  NuPlayerDecoderBase.h  NuPlayerDecoderPassThrough.cpp  NuPlayerDecoderPassThrough.h  NuPlayerDriver.cpp  NuPlayerDriver.h  NuPlayerRenderer.cpp  NuPlayerRenderer.h  NuPlayerSource.h  NuPlayerStats.cpp  NuPlayerStats.h  RTSPSource.cpp  RTSPSource.h  StreamingSource.cpp  WFDRenderer.cpp  WFDRenderer.h
media/libstagefright/: ACodec.cpp  AMRWriter.cpp  Android.bp  Android.mk  AudioPlayer.cpp  AudioSource.cpp  AwesomePlayer.cpp  CameraSource.cpp  DTSUtils.cpp  DataSource.cpp  ExtendedCodec.cpp  ExtendedExtractor.cpp  ExtendedMediaDefs.cpp  ExtendedPrefetchSource.cpp  ExtendedStats.cpp  ExtendedUtils.cpp  ExtendedWriter.cpp  FLACDecoder.cpp  FLACExtractor.cpp  FMA2DPWriter.cpp  FileSource.cpp  FrameDecoder.cpp  HTTPBase.cpp  LPAPlayer.cpp  LPAPlayerALSA.cpp  MPEG4Extractor.cpp  MPEG4Writer.cpp  MPQAudioPlayer.cpp  MediaAdapter.cpp  MediaCodec.cpp  MediaCodecList.cpp  MediaCodecSource.cpp  MediaDefs.cpp  MediaExtractor.cpp  MediaMuxer.cpp  MetaData.cpp  NotifyPlaybackStates.cpp  NuCachedSource2.cpp  NuMediaExtractor.cpp  OMXClient.cpp  (+20 more)
media/libstagefright/chromium_http/: Android.mk  ChromiumHTTPDataSource.cpp  support.cpp
media/libstagefright/codecs/amrwbenc/: Makefile.am  codec_amrwbenc.sym
media/libstagefright/codecs/amrwbenc/src/: preemph.c  q_pulse.c
media/libstagefright/colorconversion/: Android.mk  ColorConverter.cpp  (+1 more)
media/mediaserver/: Android.mk  main_mediaserver.cpp
media/mtp/: Makefile.am  MtpDataPacket.cpp  MtpDebug.h  MtpDevice.cpp  MtpMain.cpp  MtpProperty.cpp  MtpServer.cpp  MtpServer.h  MtpStorageInfo.cpp  MtpStringBuffer.cpp  MtpStringBuffer.h
services/audioflinger/: Android.mk  AudioFlinger.cpp  AudioFlinger.h  AudioMixer.cpp  AudioMixer.h  AudioPolicyService.cpp  AudioPolicyService.h  AudioResampler.cpp  AudioResampler.h  AudioResamplerCubic.cpp  AudioResamplerCubic.h  AudioResamplerDyn.cpp  AudioResamplerDyn.h  AudioResamplerQTI.cpp  AudioResamplerQTI.h  AudioResamplerSinc.cpp  AudioResamplerSinc.h  Effects.cpp  Effects.h  FastMixer.cpp  FastThread.cpp  PatchPanel.cpp  PlaybackTracks.h  SchedulingPolicyService.cpp  Threads.cpp  Threads.h  Tracks.cpp
services/audiopolicy/: Android.mk  AudioPolicyManager.cpp  AudioPolicyManager.h
services/mediacodec/: Android.mk
services/mediaextractor/: main_extractorservice.cpp
(+173 files in other folders)
